--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "radium": "^0.18.1",
     "react": "^15.3.2",
+    "react-burger-menu": "^1.10.9",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0"
   },
