--- a/package.json
+++ b/package.json
@@ -6,11 +6,16 @@
     "react-scripts": "0.7.0"
   },
   "dependencies": {
+    "jquery": "^3.1.1",
     "radium": "^0.18.1",
     "react": "^15.3.2",
     "react-burger-menu": "^1.10.9",
     "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
+    "react-google-map": "^3.0.1",
+    "react-google-maps": "^4.11.0",
+    "react-google-maps-loader": "^2.0.1",
+    "react-router": "^3.0.0",
+    "react-youtube": "^7.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
